Endpoint for getting reservations in JSON format added.
