# reservation/src/main/resources/openapi/specification.yaml
@@ -65,6 +65,38 @@ paths:
           description: No data found for the given parameters
         '500':
           description: Internal Server Error due to exceptions during processing
+  /{assetId}/market/{marketId}:
+    get:
+      summary: Get the reservation data from the DB in a JSON format
+      description: Queries the reservation service for reservations that match the provided asset ID and market ID. It maps the retrieved reservations to `ReservationDTO` objects and returns them in a JSON format.
+      parameters:
+        - name: assetId
+          in: path
+          required: true
+          schema:
+            type: string
+            format: uuid
+          description: Unique identifier for the asset associated with the reservation
+        - name: marketId
+          in: path
+          required: true
+          schema:
+            type: string
+            format: uuid
+          description: Unique identifier for the market associated with the reservation
+      responses:
+        '200':
+          description: A list of `ReservationDTO` objects in JSON format
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/ReservationDTO'
+        '400':
+          description: Bad request due to invalid input parameters, e.g., 'assetId' and/or 'marketId' are/is 'null'
+        '404':
+          description: No data found for the given parameters
 components:
   schemas:
     Reservation:
@@ -134,3 +166,64 @@ components:
         - assetId
         - marketId
         - updatedAt
+    ReservationDTO:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+          description: Unique identifier of the reservation, represented as a long integer
+        timestamp:
+          type: string
+          format: date-time
+          description: Data time point
+        assetId:
+          type: string
+          format: uuid
+          description: Asset ID
+        marketId:
+          type: string
+          format: uuid
+          description: Market ID
+        positiveBidId:
+          type: string
+          format: uuid
+          description: Positive bid ID
+        negativeBidId:
+          type: string
+          format: uuid
+          description: Negative bid ID
+        positiveValue:
+          type: number
+          format: double
+          description: Positive value in kW
+          example: 200000
+        positiveCapacityPrice:
+          type: number
+          format: double
+          description: Positive capacity price in EUR/MW/h
+          example: 1.5
+        positiveEnergyPrice:
+          type: number
+          format: double
+          description: Positive energy price in EUR/MW/h
+          example: 1.5
+        negativeValue:
+          type: number
+          format: double
+          description: Negative value in kW
+          example: 250000
+        negativeCapacityPrice:
+          type: number
+          format: double
+          description: Negative capacity price in EUR/MW/h
+          example: 2.0
+        negativeEnergyPrice:
+          type: number
+          format: double
+          description: Negative energy price in EUR/MW/h
+          example: 2.0
+        updatedAt:
+          type: string
+          format: date-time
+          description: Date time of updated interval
